--- a/company.html
+++ b/company.html
@@ -13,7 +13,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-     <div> <h4 class="text-white row">MedNova</h4></div>
+      <div><img src="medlogo.jpg" alt="" class="img-fluid" style="width: 5rem;" ></div>
       <div class="row collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav d-flex justify-content-evenly">
          <li><a class="nav-link active text-white" href="index.html" role="navigation"><i>Landing</i></a></li>
