--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
         </ul>
     </div>
     <div class="">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-  <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%"></div>
+     <button></button>
   </div> 
       
      <!-- main 1 -->
@@ -162,6 +155,7 @@
         <img src="./istockphoto-1460829987-612x612-removebg-preview (1).png" alt="3dimages">
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script src="index.js"></script>
 </body>
 </html> 
 -
